--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,4 @@
-
+{
     "lang": "en-us",
     "name": "Mathdragon!",
     "short_name": "Mathdragon!",
@@ -8,11 +8,17 @@
     "theme_color": "#2f3d58",
     "orientation": "any",
     "display": "standalone",
-    "icons": [
-        {
-            "src": "/icon512.png",
-            "sizes": "512x512"
-        }
-    ]
+    "icons": [ 
+    {
+      "src":"/favicon/android-chrome-192x192.png",
+      "sizes":"192x192",
+      "type":"image/png"
+    },{
+      "src":"/favicon/android-chrome-512x512.png",
+      "sizes":"512x512",
+      "type":"image/png"}],
+    "theme_color":"#008000",
+    "background_color":"#ffffff",
+    "display":"standalone"}
 }
 
