Add PWA support

--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,5 @@
       "type":"image/png"}],
     "theme_color":"#008000",
     "background_color":"#ffffff",
-    "display":"standalone"}
-}
+    "display":"standalone"
 
