Fix PWA support

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "Mathdragon!",
     "short_name": "Mathdragon!",
     "description": "A simple game to help practice math, for children of around six years old",
-    "start_url": "/",
+    "start_url": "/Mathdragon/",
     "background_color": "#2f3d58",
     "theme_color": "#2f3d58",
     "orientation": "any",
