--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,5 @@
     },{
       "src":"Mathdragon/favicon/android-chrome-512x512.png",
       "sizes":"512x512",
-      "type":"image/png"}],
+      "type":"image/png"}]
 }
